simplog.bnf
<atomic-term> ::= "(" <atomic-term> ")" | <type-term> | <object-term> | <relation-term>

<term> ::= | "(" <term> ")" | <atomic-term> | <qualified-term> | <term> "," <term> 

<qualified-term> ::= <object-term>::<type-term> | <term> ":" <statement> | <term> ":" <decapitated-relation>

<statement> ::= "{" <statement> "}" | <term-declaration> | <statement-declaration> | <predication-statement> | <relation-statement> | <argument> | <statement> "\and" <statement> 

<term-declaration> ::= "prim" "(" <atomic-term> ")" | "def" "{" <predication-statement> "}" | "form" "(" <term> ")" | "form" "{" <term> "?=" <term> "}"

<statement-declaration> ::= "asrt" "{" <statement> "}" | "syn" "{" <statement> "}"

<predication-statement> ::= <term> ";" <statment> | <term> ";" <decapitated-relation>

<relation-statement> ::= <term> <relation-term> <term>

<decapitated-relation> ::= <relation-term> <term>

<argument> ::= "prv" "{" <statement> "|" <deduction> "}"

<deduction> ::= "{" <deduction> "}" | <premise> "\trfr" <conclusion>

<premise> ::= "{" <premise> "}" | <statement> | <deduction> | <premise> \and <premise>

<conclusion> ::= <statement> | <deduction> "\trfr" <conclusion> | "F"

<block-comment> ::= "/*" ("*"(^"/")|^"*")* "*/"

<line-comment> ::= "/#" (^"\n")* (^"\n" "\") "\n" 
